# open62541_namespaces

./: .gitignore  .gitmodules  CMakeLists.txt
model/: project1.NodeSet2.xml  project2.NodeSet2.xml
src/: main.c
